<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".NewDesign.FragmentHome">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bglight">
    <RelativeLayout
        android:id="@+id/ray_company_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">
        <android.support.v7.widget.CardView
            android:id="@+id/card_logo"
            android:layout_width="140dp"
            android:layout_height="140dp"
            app:cardCornerRadius="70dp"
            android:layout_alignParentRight="true">
            <ImageView
                android:id="@+id/img_company_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:src="@drawable/setting_logo" />
        </android.support.v7.widget.CardView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:layout_toLeftOf="@+id/card_logo"
            android:padding="10dp">
            <TextView
                android:id="@+id/tv_company_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Company Name"
                android:textSize="20dp"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/tv_company_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Company Address"
                android:textSize="16dp"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/tv_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Register Mobile Number :1233456789"
                android:textSize="16dp"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/tv_completed_request"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Completed Requests: 3"
                android:textSize="14dp"
                android:textColor="@color/white"/>

        </LinearLayout>
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:background="@color/white"
        android:layout_below="@+id/ray_company_details">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/white">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <android.support.v7.widget.CardView
                    android:id="@+id/card_work_request"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    app:cardElevation="5dp"
                    app:cardCornerRadius="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/work_request"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textSize="16sp"
                            android:padding="8dp"
                            android:text="@string/work_request"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:id="@+id/card_quotation"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    app:cardElevation="5dp"
                    app:cardCornerRadius="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/quotation"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textSize="16sp"
                            android:padding="8dp"
                            android:text="@string/quotation"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <android.support.v7.widget.CardView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    app:cardElevation="5dp"
                    app:cardCornerRadius="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/work_status"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textSize="16sp"
                            android:padding="8dp"
                            android:text="@string/work_status"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    app:cardElevation="5dp"
                    app:cardCornerRadius="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/invoice"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textSize="16sp"
                            android:padding="8dp"
                            android:text="@string/invoice"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <android.support.v7.widget.CardView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    app:cardElevation="5dp"
                    app:cardCornerRadius="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/my_payment"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textSize="16sp"
                            android:padding="8dp"
                            android:text="@string/my_payment"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    app:cardElevation="5dp"
                    app:cardCornerRadius="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/my_story"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textSize="16sp"
                            android:padding="8dp"
                            android:text="@string/my_story"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
</layout>